# Observer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  observer.puml
Project_O/: CMakeLists.txt  Project_O.sln
Project_O/header/glad/: glad.h
Project_O/include/resources/: shader.hpp
Project_O/renderer/: renderer.vcxproj
Project_O/shaders/: basic.fs  basic.vs
Project_O/src/: glad.c  main.cpp
Project_O/src/resources/: shader.cpp
cmake/: dependency.cmake
include/: allocator.hpp  allocator_vk.hpp  application.hpp  commandbuffer.hpp  commandbuffer_vk.hpp  commandpool.hpp  commandpool_vk.hpp  context.hpp  datatypes.hpp  device.hpp  format.hpp  graphicsapi.hpp  graphicsdevice.hpp  graphicsdevice_vk.hpp  graphicsobject.hpp  graphicspipeline.hpp  graphicspipeline_vk.hpp  lowgraphicsobject.hpp  lowrenderer.hpp  lowrenderer_gl.hpp  lowrenderer_vk.hpp  memoryallocator.hpp  memorymanager.hpp  mesh.hpp  pipeline.hpp  queue.hpp  renderer.hpp  resource.hpp  resourceloader.hpp  resourcesmanager.hpp  scene.hpp  shader.hpp  shadermodule.hpp  shadermodule_vk.hpp  shadermoduledesc_vk.hpp  vertex.hpp  vertexbuffer.hpp  vertexbuffer_gl.hpp  vertexbuffer_vk.hpp  vertexbufferdesc_gl.hpp  (+5 more)
internal/: CMakeLists.txt  application.hpp  graphicsapi.hpp  image.hpp  mesh.cpp  mesh.hpp  renderer.hpp  resource.hpp  resource_loader.cpp  resource_loader.hpp  resourceloader.cpp  resourceloader.hpp  scene.hpp  vertex.hpp  window.hpp
internal/data/: CMakeLists.txt  resource.hpp  resource_manager.cpp  resource_manager.hpp
internal/data/saved/: mesh.cpp  mesh.hpp  scene.cpp  scene.hpp
internal/engine/: uniform.hpp  vertex.hpp
internal/engine_types/: vertex.hpp
internal/graphics/: CMakeLists.txt  backbuffer.hpp  context.cpp  context.hpp  framebuffer.hpp  graphics_api.hpp  instance.cpp  instance.hpp  renderer.puml  surface.cpp  surface.hpp  swapchain.cpp  swapchain.hpp  symbols.cpp  symbols.hpp  synchronization.hpp
internal/graphics/asset/: CMakeLists.txt  pipeline.hpp  shadermodule.hpp
internal/graphics/device/: CMakeLists.txt  device.cpp  device.hpp  device.inl  physical_device.cpp  physical_device.hpp
internal/graphics/device/asset/: pipeline.cpp  pipeline.hpp  render_pass.hpp  shader.cpp  shader.hpp
internal/graphics/device/memory/: acceleration_structure.hpp  buffer.cpp  buffer.hpp  descriptor.hpp  image.hpp  memoryallocator.hpp  vmahelper.hpp
internal/graphics/device_asset/: CMakeLists.txt  pipeline.hpp  shader.hpp
internal/graphics/device_memory/: CMakeLists.txt  buffer.hpp  image.hpp  memoryallocator.hpp  vmahelper.hpp
internal/graphics/renderer/: renderer.hpp
internal/host_memory/: resource.hpp
internal/host_memory/saved/: mesh.hpp
internal/renderer/: CMakeLists.txt  render_state.hpp  renderer.cpp  renderer.hpp
internal/wsi/: CMakeLists.txt  window.cpp  window.hpp  window_glfw.cpp  window_glfw.hpp
shaders/: triangle.vert
src/: CMakeLists.txt  allocator.cpp  allocator_vk.cpp  application.cpp  commandbuffer.cpp  commandbuffer_vk.cpp  commandpool.cpp  commandpool_vk.cpp  device.cpp  format.cpp  graphicsdevice.cpp  graphicsdevice_vk.cpp  graphicspipeline.cpp  graphicspipeline_vk.cpp  lowrenderer.cpp  lowrenderer_gl.cpp  lowrenderer_vk.cpp  main.cpp  memoryallocator.cpp  mesh.cpp  renderer.cpp  resourceloader.cpp  resourcesmanager.cpp  shader.cpp  shadermodule.cpp  shadermodule_vk.cpp  shadermoduledesc_vk.cpp  vertex.cpp  vertexbuffer.cpp  vmahelper.cpp
src/client/: CMakeLists.txt  application.cpp  application.hpp
